# skiagram

./: .gitattributes  .gitignore  Cargo.toml  LICENSE  README.md  dist-workspace.toml
.github/workflows/: ci.yml  crates-io.yml  npm.yml  release.yml  winget.yml
crates/skiagram/: Cargo.toml
crates/skiagram-core/: Cargo.toml
crates/skiagram-core/src/: error.rs  lib.rs  model.rs  pricing.rs
crates/skiagram-core/src/adapters/: claude_code.rs  codex.rs  copilot.rs  cursor.rs  gemini.rs  mod.rs
crates/skiagram-core/src/analysis/: classify.rs  context.rs  dedup.rs  flame.rs
crates/skiagram-core/tests/: claude_code_snapshot.rs  codex_snapshot.rs  copilot_snapshot.rs  gemini_snapshot.rs
crates/skiagram-core/tests/snapshots/: claude_code_snapshot__main_session.snap  claude_code_snapshot__subagent_session.snap  codex_snapshot__archived_session.snap  codex_snapshot__main_session.snap  copilot_snapshot__events_session.snap  gemini_snapshot__main_session.snap
crates/skiagram/src/: cli.rs  config.rs  main.rs  pricing.rs  watch.rs
crates/skiagram/src/render/: anomalies.rs  banner.rs  classify.rs  flame.rs  mod.rs  table.rs
crates/skiagram/src/tui/: app.rs
crates/skiagram/src/tui/views/: context.rs  mod.rs  sessions.rs  turns.rs
crates/skiagram/tests/: anomalies.rs  classify.rs  cli.rs  codex.rs  config.rs  copilot.rs  flame.rs  gemini.rs  pricing.rs
crates/tokscope/: Cargo.toml
crates/tokscope-core/: Cargo.toml
crates/tokscope-core/src/: error.rs  lib.rs  model.rs  pricing.rs
crates/tokscope-core/src/adapters/: claude_code.rs  codex.rs  copilot.rs  cursor.rs  gemini.rs  mod.rs
crates/tokscope-core/src/analysis/: aggregate.rs  anomaly.rs  classify.rs  context.rs  dedup.rs  drilldown.rs  flame.rs  mod.rs
crates/tokscope-core/tests/: claude_code_snapshot.rs  codex_snapshot.rs  copilot_snapshot.rs  gemini_snapshot.rs
crates/tokscope-core/tests/snapshots/: claude_code_snapshot__main_session.snap  claude_code_snapshot__subagent_session.snap  codex_snapshot__archived_session.snap  codex_snapshot__main_session.snap  copilot_snapshot__events_session.snap  gemini_snapshot__main_session.snap
crates/tokscope/src/: cli.rs  config.rs  main.rs  pricing.rs  watch.rs
crates/tokscope/src/render/: anomalies.rs  classify.rs  flame.rs  json.rs  mod.rs  table.rs
crates/tokscope/src/tui/: app.rs  event.rs  mod.rs
crates/tokscope/src/tui/views/: context.rs  mod.rs  sessions.rs  turns.rs
crates/tokscope/tests/: anomalies.rs  classify.rs  cli.rs  codex.rs  config.rs  copilot.rs  flame.rs  gemini.rs  pricing.rs
fixtures/claude-code-anomaly/projects/-home-dev-anomaly-app/: aaaaaaaa-1111-4000-8000-000000000aaa.jsonl
fixtures/claude-code-classify/projects/-home-dev-classify-app/: a0000000-0004-4000-8000-000000000004.jsonl  d1d1d1d1-0001-4000-8000-000000000001.jsonl  e1e1e1e1-0003-4000-8000-000000000003.jsonl  f1f1f1f1-0002-4000-8000-000000000002.jsonl
fixtures/claude-code-classify/projects/-home-dev-classify-app/e1e1e1e1-0003-4000-8000-000000000003/subagents/: agent-expl0001.jsonl
fixtures/claude-code-context/projects/-home-dev-webapp/: c0ffee00-0000-4000-8000-000000000abc.jsonl
fixtures/claude-code/projects/-home-dev-acme-app/: 3e9d2c41-7b5a-4f2e-9c1d-2f6b8a1c0e11.jsonl
fixtures/claude-code/projects/-home-dev-acme-app/3e9d2c41-7b5a-4f2e-9c1d-2f6b8a1c0e11/subagents/: agent-fix0001.jsonl
fixtures/claude-code/projects/-home-dev-blog/: 7c44e9a2-0b3d-4d62-8f5e-aa00bb11cc22.jsonl
fixtures/codex/archived_sessions/: rollout-2026-06-14T09-00-00-2a3b4c5d-6e7f-8091-bcde-f01234567890.jsonl
fixtures/codex/sessions/2026/06/15/: rollout-2026-06-15T10-00-00-1f2e3d4c-5b6a-7980-abcd-ef0123456789.jsonl
fixtures/config/: cursor.toml  gemini.toml
fixtures/copilot/session-state/11111111-2222-4333-8444-555555555555/: events.jsonl
fixtures/gemini/tmp/demo-project/chats/: session-2026-06-17T10-00-00-abcd1234.jsonl
fixtures/pricing/: litellm-cache.json
