[package]
name = "skiagram"
description = "CLI + TUI that profiles where your AI coding agent's tokens actually went — locally, offline."
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "../../README.md"

[dependencies]
skiagram-core.workspace = true

anyhow.workspace = true
clap.workspace = true
comfy-table.workspace = true
directories.workspace = true # resolve the per-OS config dir for config.toml
inferno.workspace = true
jiff.workspace = true
notify.workspace = true # live-tail file watching (skiagram watch)
owo-colors.workspace = true
ratatui.workspace = true # crossterm backend used via the `ratatui::crossterm` re-export
serde.workspace = true
serde_json.workspace = true
toml.workspace = true # parse config.toml
tracing.workspace = true
tracing-subscriber.workspace = true
ureq = { workspace = true, optional = true } # online pricing refresh (network feature)

[features]
# OFF by default — the standard build is fully offline (CLAUDE.md §12). Enabling it
# compiles the `--refresh-pricing` fetch path (LiteLLM) via `ureq`.
network = ["dep:ureq"]

[dev-dependencies]
assert_cmd.workspace = true
predicates.workspace = true

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/{ name }-{ target }.{ archive-format }"
