[package]
name = "tokscope"
description = "CLI + TUI that profiles where your AI coding agent's tokens actually went — locally, offline."
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
tokscope-core.workspace = true

anyhow.workspace = true
clap.workspace = true
comfy-table.workspace = true
jiff.workspace = true
owo-colors.workspace = true
ratatui.workspace = true # crossterm backend used via the `ratatui::crossterm` re-export
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
assert_cmd.workspace = true
predicates.workspace = true
