[package]
name = "tokscope"
description = "CLI + TUI that profiles where your AI coding agent's tokens actually went — locally, offline."
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
tokscope-core.workspace = true

anyhow.workspace = true
clap.workspace = true
comfy-table.workspace = true
directories.workspace = true # resolve the per-OS config dir for config.toml
inferno.workspace = true
jiff.workspace = true
owo-colors.workspace = true
ratatui.workspace = true # crossterm backend used via the `ratatui::crossterm` re-export
serde.workspace = true
serde_json.workspace = true
toml.workspace = true # parse config.toml
tracing.workspace = true
tracing-subscriber.workspace = true
ureq = { workspace = true, optional = true } # online pricing refresh (network feature)

[features]
# OFF by default — the standard build is fully offline (CLAUDE.md §12). Enabling it
# compiles the `--refresh-pricing` fetch path (LiteLLM) via `ureq`.
network = ["dep:ureq"]

[dev-dependencies]
assert_cmd.workspace = true
predicates.workspace = true
